--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "from2": "^2.3.0",
     "gulp-error-handle": "^1.0.1",
     "loglevel": "^1.6.1",
+    "merge": "^1.2.1",
     "pkginfo": "^0.4.1",
     "plugin-error": "^1.0.1",
     "qewd-transform-json": "git+https://github.com/donpedro/qewd-transform-json.git#IgnoreTagsInData",
